nav spacing fix and router fix

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,28 @@ h4 {
     color: #002E68;
 }
 
+/* NAV STYLING */
+
+.nav-link {
+    margin-left: 2em;
+    font-weight: bold;
+}
+.navbar-nav {
+    margin-left: auto;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #006D04
+}
+
+.navbar-nav .nav-link:active {
+    color: #006D04
+}
+
+.nav_click:active {
+    color: #006D04 !important
+}
+
 /* BUTTON STYLING */
 .button_center {
     text-align: center;
